--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
         <meta name="description" content="JavaScript">
         <meta name="theme-color" content="#ffffff">
         <title>JavaScript</title>
-        <link rel="stylesheet" href="./assets/index.css">
+        <link rel="stylesheet" href="./assets/css/index.css">
     </head>
     <body>
         <h1>Web os js live</h1>
-        <script src="./index.js"></script>
+        <script src="./asset/js/index.js"></script>
     </body>
 </html>
