--- a/src/index.html
+++ b/src/index.html
@@ -377,7 +377,7 @@
       }
     </script>
 
-    <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/calculator.js"></script>
+    <script src="./assets/js/settings.js" type="module"></script>
+    <script src="./assets/js/calculator.js" type="module"></script>
   </body>
 </html>
