fix popup relocation

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
       <!-- Fenêtre calculatrice -->
       <div id="calculator-modal">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header-calc">
             <h1>Calculatrice</h1>
             <span class="close-calc">&times;</span>
           </div>
@@ -223,7 +223,7 @@
       <!-- Fenêtre horlogerie -->
       <div id="horlogerie-modal">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header-horlo">
             <h1>Horlogerie</h1>
             <span class="close-horlogerie">&times;</span>
           </div>
@@ -270,7 +270,7 @@
       <!-- Fenêtre tic tac toe -->
       <div id="tictactoe-modal">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header-tictac">
             <h1>Tic Tac Toe</h1>
             <span class="close-tictactoe">&times;</span>
           </div>
