--- a/src/index.html
+++ b/src/index.html
@@ -185,10 +185,6 @@
             <span class="close-calc">&times;</span>
           </div>
           <div class="modal-body">
-            <div id="dark">
-              <input type="checkbox" id="dark-mode-switch">
-              <label for="dark-mode-switch"></label>
-            </div>
             <div id="calculator">
                 <input type="text" id="display">
                 <br>
@@ -228,39 +224,47 @@
             <span class="close-horlogerie">&times;</span>
           </div>
           <div class="modal-body">
-            <ul>
+            <div class="nav-horlo">
+              <ul>
                 <li><a id="minuteur-btn">Minuteur</a></li>
                 <li><a id="chrono-btn">Chronomètre</a></li>
                 <li><a id="horloge-btn">Horloge</a></li>
-            </ul>
+              </ul>
+            </div>
             <div id="horlogerie">
               <div id="horloge">
                 <span id="horloge"></span>
               </div>
               <div id="chrono">
-                <h1>Chronomètre</h1>
+                <div class="chrono">
+                  <h1>Chronomètre</h1>
                   <div id="time"></div>
 
-                  <form name="parametre" action="" method="">
-                      <input type="button" name="lance" value="Démarrer" onclick="chrono();debut();" />
-                      <input type="button" name="pause" value="Stop" onclick="arret();" disabled="disabled" />
-                      <input type="button" name="zero" value="Effacer" onclick="arret();raz();" disabled="disabled" />
-                      <input type="button" name="intermediaire" value="Intermediaire" onclick="inter();" disabled="disabled" />
-                      <input type="button" name="rappel" value="Rappel" onclick="rappeler();" disabled="disabled" />
+                  <form name="parametre">
+                      <input type="button" class="button-76" name="lance" value="Démarrer" onclick="chrono();debut();" />
+                      <input type="button" class="button-76" name="pause" value="Stop" onclick="arret();" disabled="disabled" />
+                      <input type="button" class="button-76" name="zero" value="Effacer" onclick="arret();raz();" disabled="disabled" />
+                      <input type="button" class="button-76" name="intermediaire" value="Intermediaire" onclick="inter();" disabled="disabled" />
+                      <input type="button" class="button-76" name="rappel" value="Rappel" onclick="rappeler();" disabled="disabled" />
                   </form>
 
                   <div id="presenter">
                       <p>Temps intermediaire :</p>
                       <span id="interm"></span>
                   </div>
+                </div>
               </div>
               <div id="minuteur">
-                <h1>Minuteur</h1>
-                <input type="number" id="input">
-                <input type="button" value="Démarrer" onclick="minuteur()">
-                <input type="button" value="Stop" onclick="stop()">
-                <div id="timer">00:00</div>
-                <audio id="xyz" src="./assets/audio/soundeffect2.mp3"></audio>
+                <div class="minuteur">
+                  <h1>Minuteur</h1>
+                  <label for="input">Temps (en minutes) :</label>
+                  <div class="minuteur-input">
+                    <input type="number" id="input">
+                    <input type="button" class="button-76" value="Démarrer" onclick="minuteur()">
+                  </div>
+                  <div id="timer">00:00</div>
+                  <audio id="xyz" src="./assets/audio/soundeffect2.mp3"></audio>
+                </div>
               </div>
             </div>
           </div>
@@ -312,7 +316,7 @@
                   <h5>vous souhaitez être X ou O ? </h5>
                   <label><input type="radio" name="player" id="rx" value="x" checked>X (joue en premier)&nbsp;</label>
                   <label><input type="radio" name="player" id="ro" value="o">O<br></label>
-                  <p><button id="okBtn" onclick="getOptions()">Jouer</button></p>
+                  <p><button class="button-49" id="okBtn" onclick="getOptions()">Jouer</button></p>
               </div>
             </div>
           </div>
