--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 
       <!-- Fenêtre de paramètres -->
       <div id="settings-modal">
-        <div class="modal-content">
+        <div class="modal-content resizer">
           <div class="modal-header">
             <h1>Paramètres</h1>
             <span class="close">&times;</span>
@@ -179,7 +179,7 @@
 
       <!-- Fenêtre calculatrice -->
       <div id="calculator-modal">
-        <div class="modal-content">
+        <div class="modal-content resizer-calc">
           <div class="modal-header-calc">
             <h1>Calculatrice</h1>
             <span class="close-calc">&times;</span>
@@ -222,7 +222,7 @@
 
       <!-- Fenêtre horlogerie -->
       <div id="horlogerie-modal">
-        <div class="modal-content">
+        <div class="modal-content resizer-horlo">
           <div class="modal-header-horlo">
             <h1>Horlogerie</h1>
             <span class="close-horlogerie">&times;</span>
@@ -269,7 +269,7 @@
 
       <!-- Fenêtre tic tac toe -->
       <div id="tictactoe-modal">
-        <div class="modal-content">
+        <div class="modal-content resizer-tictac">
           <div class="modal-header-tictac">
             <h1>Tic Tac Toe</h1>
             <span class="close-tictactoe">&times;</span>
